syntax = "proto3";

option csharp_namespace = "WordleGameServer.Protos";

service DailyWordle {
	rpc Play(stream GuessRequest) returns (stream GuessResponse);
	rpc GetStats (StatsRequest) returns (StatsResponse);
}

message GuessRequest {
	string guess = 1;
}

message GuessResponse {
	uint32 guessesLeft = 1;
	bool isValidWord = 2;
	bool isCorrect = 3;
	bool isGameOver = 4;
	repeated LetterResult letterResults = 5;
	repeated string availableLetters = 6;
	repeated string includedLetters = 7;
	repeated string excludedLetters = 8;
}

message LetterResult {
  string letter = 1;
  ResultType result = 2;
}

enum ResultType {
  NOT_IN_WORD = 0;
  WRONG_POSITION = 1;
  CORRECT_POSITION = 2;
}

message StatsRequest {
}

message StatsResponse {
	uint32 players = 1;
	double winnerPercentage = 2;
	double averageGuesses = 3 ;
}
